# markdown

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  esbuild.config.mjs  gen-icon.js  main.js  package-lock.json  package.json  preload.js
.github/workflows/: release.yml
docs/plans/: 2026-02-28-drag-drop-file-loading-design.md
docs/skills/release-routine/: SKILL.md
renderer/: api.js  app.js  diff-engine.js  diff-view.js  index.html  platform.js  styles.css
renderer/plugins/: plugin-bus.js  sandbox.js  snippet-bridge.js  theme-adapter.js
scripts/: generate-icon.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
